syntax = "proto3";
package VRDAVis;

enum EventType {
    EMPTY_EVENT = 0;
    REGISTER_VIEWER = 1;
    REGISTER_VIEWER_ACK = 2;
    FILE_LIST_REQUEST = 3;
    FILE_INFO_REQUEST = 4;
    FILE_LIST_RESPONSE = 5;
    FILE_INFO_RESPONSE = 6;
    OPEN_FILE = 7;
    OPEN_FILE_ACK = 8;
    CLOSE_FILE = 9;
    ADD_REQUIRED_CUBES = 10;
    REMOVE_REQUIRED_CUBES = 11;
    CUBELET_DATA = 12;
    CUBELET_SYNC = 13;
    RESUME_SESSION = 14;
    RESUME_SESSION_ACK = 15;
    ERROR_DATA = 16;
    REGION_STATS_DATA = 17;
    REGION_STATS_REQUEST = 18;
    SET_REGION_REQUEST = 19;
    SET_REGION_RESPONSE = 20;
}

enum SessionType {
    NEW = 0;
    RESUMED = 1;
}

enum FileType {
    CASA = 0;
    CRTF = 1;
    DS9_REG = 2;
    FITS = 3;
    HDF5 = 4;
    MIRIAD = 5;
    UNKNOWN = 6;
}

enum CompressionType {
    NONE = 0;
    ZFP = 1;
    SZ = 2;
}

enum ErrorSeverity {
    DEBUG = 0;
    INFO = 1;
    WARNING = 2;
    ERROR = 3;
    CRITICAL = 4;
}

enum EntryType {
    STRING = 0;
    FLOAT = 1;
    INT = 2;
}

enum FileListType {
    Volume = 0;
}

enum FileListFilterMode {
    Content = 0;
    Extension = 1;
    AllFiles = 2;
}

enum StatsType {
    NumPixels = 0;
    NanCount = 1;
    Sum = 2;
    FluxDensity = 3;
    Mean = 4;
    RMS = 5;
    Sigma = 6;
    SumSq = 7;
    Min = 8;
    Max = 9;
    Extrema = 10;
    Blc = 11;
    Trc = 12;
    MinPos = 13;
    MaxPos = 14;
    Blcf = 15;
    Trcf = 16;
    MinPosf = 17;
    MaxPosf = 18;
}